@@ -1,3 +1,10 @@
+2017-09-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_grammar.y (init_nasl_ctx): Use a timestamp to skip checking
+	for .nasl and .inc files that were checked before and weren't updated
+	since. Delay call to load_signatures() until the checksums are needed.
+	(load_signatures): Rename to load_checksums.
+
 2017-09-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* tools/greenbone-nvt-sync.in: Globally set NVT_DIR instead of
